0.09

0.08 2022-10-25T16:13:46+02:00
 - Add 'no_data_callback' parameter to set list of elements which not
   process 'data_callback'. Example is 'script' in which we don't need HTML
   escaping.
 - Update copyright years.

0.07 2020-10-14T01:01:50+02:00
 - Add 'input_tags_item_callback' for processing before 'Tags' put().
 - Fix Makefile.PL fails with no '.' in @INC.
 - Rewrite doc to use =head2 in case of methods.

0.06 2020-04-28T00:10:37+02:00
 - Add author website to doc.
 - Add open_elements() method, deprecate open_tags() method with warning.
 - Add repository name to doc.
 - Add some comments to tests.
 - Fix issue with XML element in lowercase only.
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Improve SYNOPSIS section in doc.
 - Update Module::Install to 1.19 version.
 - Update author github username.
 - Update author name.
 - Update copyright years.

0.05 2016-03-23T21:22:44+01:00
 - Add LICENSE file.
 - Add tests for finalize() and open_tags() methods.
 - Fix finalize() in SGML mode.
 - Rewrite test files to better names.
 - Update copyright years.

0.04 2015-10-27T12:41:11+01:00
 - Improve SEE ALSO section in doc.
 - Improve doc.
 - Move author tests to xt/ directory.

0.03 2015-08-25T23:02:33+02:00
 - Fix perl version in Makefile.PL and META.yml.
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Improve SEE ALSO section in doc.

0.02 2015-08-24T11:36:34+02:00
 - Add Test::NoWarnings to version test.
 - Add examples/ directory.
 - Add minimal version of Perl.
 - Fix test dependencies.
 - Update Module::Install to 1.16 version.

0.01 2015-03-17T10:54:46+01:00
 - First version.